-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.12.9, Lustre 2.15.1
-
None
-
3
-
9223372036854775807
When the coordinator tries to send multiple HSM actions in
a single request to agent, if one of the request fails incompat checks in mdt_hsm_is_action_compat(), all the requests are wrongly marked as STARTED but none of the requests are actually sent to the agent. The STARTED requests will never be rescheduled and will fail after timeout.